# md4help-center

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  README.md  md4help-center.py  pyproject.toml  requirements.txt
public/: ignore.example.json5
src/: main.py
src/md4help_center/: __init__.py  info_generator.py  main.py
