[build-system]
requires = ["uv_build>=0.7.6,<0.8.0"]
build-backend = "uv_build"

[project]
name = "md4help-center"
version = "0.1.0"
description = "Make mds for LLMs from Zendesk help center"
authors = [
    { name = "Tuhacrt", email = "a067800497@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "markdownify<2.0.0,>=1.1.0",
    "requests<3.0.0,>=2.32.3",
]

[project.scripts]
md4help-center = "md4help_center:main"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "pre-commit<5.0.0,>=4.2.0",
    "dotenv>=0.9.9",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# Ruff configuration
[tool.ruff] # https://docs.astral.sh/ruff/settings/#top-level
line-length = 120
show-fixes = true
exclude = ["**/migrations/"] # Exclude Django migrations
src = ["src"]

[tool.ruff.format] # https://docs.astral.sh/ruff/settings/#format
quote-style = "single"

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
select = [
    "A",     # Builtins
    "ANN",   # Annotations
    "ARG",   # Unused arguments
    "ASYNC", # Asynchronous code
    "B",     # Bugbear
    "BLE",   # Blind except
    "C4",    # Comprehensions
    "COM",   # Commas
    "D1",    # Undocumented public elements
    "D2",    # Docstring conventions
    "D3",    # Triple double quotes
    "D4",    # Docstring text format
    "DTZ",   # Datetimes
    "E",     # Errors
    "EM",    # Error messages
    "ERA",   # Commented-out code
    "F",     # Pyflakes
    "FBT",   # "Boolean trap"
    "FIX",   # "FIXME"-comments
    "G",     # Logging format
    "I",     # Isort
    "ICN",   # Import conventions
    "INP",   # Disallow PEP-420 (Implicit namespace packages)
    "LOG",   # Logging
    "N",     # PEP-8 Naming
    "PERF",  # Unnecessary performance costs
    "PIE",   # Unnecessary code
    "Q",     # Quotes
    "RET",   # Return
    "RUF",   # Ruff
    "SIM",   # Code simplification
    "T10",   # Debugger
  # "T20",   # Print
    "TCH",   # Type checking
    "TD",    # "TODO"-comments
    "TID",   # Tidy imports
    "UP",    # Pyupgrade
    "W",     # Warnings
]
ignore = [
    "COM812",  # Missing trailing comma
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
    "Q003",    # Avoidable escaped quote
]
# Ruff configuration end
